News UAT/force-app/main/default/objects/Test_Log__c/Test_Log__c.object-meta.xml
<CustomObject>
    <label>Test Log</label>
    <nameField>
        <displayFormat>TLog-{0}</displayFormat>
        <label>Test Log Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Test Log</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>