News UAT/force-app/main/default/objects/Test_Log__c/fields/Corresponding_Bug_Enhancement_Request__c.field-meta.xml
<CustomField>
    <fullName>Corresponding_Bug_Enhancement_Request__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Corresponding Bug/Enhancement Request</label>
    <referenceTo>Release_Task__c</referenceTo>
    <relationshipLabel>Test Log</relationshipLabel>
    <relationshipName>Test_Log</relationshipName>
    <type>Lookup</type>
</CustomField>