News UAT/force-app/main/default/objects/Test_Log__c/fields/fail_rate__c.field-meta.xml
<CustomField>
    <fullName>fail_rate__c</fullName>
    <formula>IF( ISPICKVAL( Status__c ,&quot;Fail&quot;) ,1, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>fail rate</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>