News UAT/force-app/main/default/objects/Test_Log__c/fields/Profile_Tested__c.field-meta.xml
<CustomField>
    <fullName>Profile_Tested__c</fullName>
    <label>Profile Tested</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Profile 1</fullName>
            </value>
            <value>
                <fullName>Profile 2</fullName>
            </value>
            <value>
                <fullName>Profile 3</fullName>
            </value>
            <value>
                <fullName>Profile 4</fullName>
            </value>
            <value>
                <fullName>Profile 5</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>