News UAT/force-app/main/default/objects/Test_Log__c/fields/Test_Script_Tested__c.field-meta.xml
<CustomField>
    <fullName>Test_Script_Tested__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Test Script Tested</label>
    <referenceTo>Test_Scripts__c</referenceTo>
    <relationshipLabel>Test Log</relationshipLabel>
    <relationshipName>Test_Log</relationshipName>
    <type>Lookup</type>
</CustomField>