News UAT/force-app/main/default/objects/Test_Log__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Corresponding_Bug_Enhancement_Request__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>